// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomeScreen Component renders correctly 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#ff0000",
    }
  }
  testID="home-screen"
>
  <ScrollView
    style={
      Object {
        "backgroundColor": "#ffffff",
      }
    }
  >
    <ImageBackground
      source={
        Object {
          "height": 1,
          "uri": "http://example.com/image.png",
          "width": 1,
        }
      }
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#C1C1C1",
          "height": 292,
          "justifyContent": "center",
        }
      }
    />
    <ContentPadding
      padding={Object {}}
      style={
        Object {
          "alignSelf": "center",
          "maxWidth": 440,
        }
      }
    >
      <Component
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginTop": 12,
          }
        }
      >
        <Text
          color="blackColor"
          markdown={false}
          markdownStyle={Object {}}
          style={
            Object {
              "color": "rgb(45, 47, 127)",
            }
          }
          type="h2"
        >
          Featured events
        </Text>
        <Touchable
          accessibilityComponentType="button"
          accessibilityTraits={
            Array [
              "button",
            ]
          }
          delayPressIn={50}
          onPress={[Function]}
          testID="view-all"
        >
          <TextLink>
            View all
          </TextLink>
        </Touchable>
      </Component>
      <Component
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
            "flexWrap": "wrap",
          }
        }
      >
        <Component
          key="1"
          style={
            Array [
              Object {
                "marginBottom": 12,
                "width": "50%",
              },
              Object {
                "paddingRight": 8,
              },
            ]
          }
        >
          <Touchable
            accessibilityComponentType="button"
            accessibilityTraits={
              Array [
                "button",
              ]
            }
            delayPressIn={50}
            onPress={[Function]}
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderRadius": 3,
                "borderWidth": 0,
                "elevation": 3,
                "shadowColor": "rgba(0, 0, 0, 0.2)",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 3,
              }
            }
            testID="event-tile-1"
          >
            <EventTile
              date="2018-07-10T00:00"
              eventCategories={
                Array [
                  "Cabaret & Variety",
                  "Music",
                ]
              }
              image={
                Object {
                  "height": 1,
                  "uri": "http://example.com/image.png",
                  "width": 1,
                }
              }
              name="some other"
            />
          </Touchable>
        </Component>
        <Component
          key="2"
          style={
            Array [
              Object {
                "marginBottom": 12,
                "width": "50%",
              },
              false,
            ]
          }
        >
          <Touchable
            accessibilityComponentType="button"
            accessibilityTraits={
              Array [
                "button",
              ]
            }
            delayPressIn={50}
            onPress={[Function]}
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderRadius": 3,
                "borderWidth": 0,
                "elevation": 3,
                "shadowColor": "rgba(0, 0, 0, 0.2)",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 3,
              }
            }
            testID="event-tile-2"
          >
            <EventTile
              date="2018-07-10T00:00"
              eventCategories={
                Array [
                  "Cabaret & Variety",
                  "Music",
                ]
              }
              image={
                Object {
                  "height": 1,
                  "uri": "http://example.com/image.png",
                  "width": 1,
                }
              }
              name="some other"
            />
          </Touchable>
        </Component>
        <Component
          key="3"
          style={
            Array [
              Object {
                "marginBottom": 12,
                "width": "50%",
              },
              Object {
                "paddingRight": 8,
              },
            ]
          }
        >
          <Touchable
            accessibilityComponentType="button"
            accessibilityTraits={
              Array [
                "button",
              ]
            }
            delayPressIn={50}
            onPress={[Function]}
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderRadius": 3,
                "borderWidth": 0,
                "elevation": 3,
                "shadowColor": "rgba(0, 0, 0, 0.2)",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 3,
              }
            }
            testID="event-tile-3"
          >
            <EventTile
              date="2018-07-10T00:00"
              eventCategories={
                Array [
                  "Cabaret & Variety",
                  "Music",
                ]
              }
              image={
                Object {
                  "height": 1,
                  "uri": "http://example.com/image.png",
                  "width": 1,
                }
              }
              name="some other"
            />
          </Touchable>
        </Component>
        <Component
          key="4"
          style={
            Array [
              Object {
                "marginBottom": 12,
                "width": "50%",
              },
              false,
            ]
          }
        >
          <Touchable
            accessibilityComponentType="button"
            accessibilityTraits={
              Array [
                "button",
              ]
            }
            delayPressIn={50}
            onPress={[Function]}
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderRadius": 3,
                "borderWidth": 0,
                "elevation": 3,
                "shadowColor": "rgba(0, 0, 0, 0.2)",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 3,
              }
            }
            testID="event-tile-4"
          >
            <EventTile
              date="2018-07-10T00:00"
              eventCategories={
                Array [
                  "Cabaret & Variety",
                  "Music",
                ]
              }
              image={
                Object {
                  "height": 1,
                  "uri": "http://example.com/image.png",
                  "width": 1,
                }
              }
              name="some other"
            />
          </Touchable>
        </Component>
      </Component>
    </ContentPadding>
  </ScrollView>
</Component>
`;

exports[`HomeScreen Component renders max 6 events 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#ff0000",
    }
  }
  testID="home-screen"
>
  <ScrollView
    style={
      Object {
        "backgroundColor": "#ffffff",
      }
    }
  >
    <ImageBackground
      source={
        Object {
          "height": 1,
          "uri": "http://example.com/image.png",
          "width": 1,
        }
      }
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#C1C1C1",
          "height": 292,
          "justifyContent": "center",
        }
      }
    />
    <ContentPadding
      padding={Object {}}
      style={
        Object {
          "alignSelf": "center",
          "maxWidth": 440,
        }
      }
    >
      <Component
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginTop": 12,
          }
        }
      >
        <Text
          color="blackColor"
          markdown={false}
          markdownStyle={Object {}}
          style={
            Object {
              "color": "rgb(45, 47, 127)",
            }
          }
          type="h2"
        >
          Featured events
        </Text>
        <Touchable
          accessibilityComponentType="button"
          accessibilityTraits={
            Array [
              "button",
            ]
          }
          delayPressIn={50}
          onPress={[Function]}
          testID="view-all"
        >
          <TextLink>
            View all
          </TextLink>
        </Touchable>
      </Component>
      <Component
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
            "flexWrap": "wrap",
          }
        }
      >
        <Component
          key="1"
          style={
            Array [
              Object {
                "marginBottom": 12,
                "width": "50%",
              },
              Object {
                "paddingRight": 8,
              },
            ]
          }
        >
          <Touchable
            accessibilityComponentType="button"
            accessibilityTraits={
              Array [
                "button",
              ]
            }
            delayPressIn={50}
            onPress={[Function]}
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderRadius": 3,
                "borderWidth": 0,
                "elevation": 3,
                "shadowColor": "rgba(0, 0, 0, 0.2)",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 3,
              }
            }
            testID="event-tile-1"
          >
            <EventTile
              date="2018-07-10T00:00"
              eventCategories={
                Array [
                  "Cabaret & Variety",
                  "Music",
                ]
              }
              image={
                Object {
                  "height": 1,
                  "uri": "http://example.com/image.png",
                  "width": 1,
                }
              }
              name="some other"
            />
          </Touchable>
        </Component>
        <Component
          key="2"
          style={
            Array [
              Object {
                "marginBottom": 12,
                "width": "50%",
              },
              false,
            ]
          }
        >
          <Touchable
            accessibilityComponentType="button"
            accessibilityTraits={
              Array [
                "button",
              ]
            }
            delayPressIn={50}
            onPress={[Function]}
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderRadius": 3,
                "borderWidth": 0,
                "elevation": 3,
                "shadowColor": "rgba(0, 0, 0, 0.2)",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 3,
              }
            }
            testID="event-tile-2"
          >
            <EventTile
              date="2018-07-10T00:00"
              eventCategories={
                Array [
                  "Cabaret & Variety",
                  "Music",
                ]
              }
              image={
                Object {
                  "height": 1,
                  "uri": "http://example.com/image.png",
                  "width": 1,
                }
              }
              name="some other"
            />
          </Touchable>
        </Component>
        <Component
          key="3"
          style={
            Array [
              Object {
                "marginBottom": 12,
                "width": "50%",
              },
              Object {
                "paddingRight": 8,
              },
            ]
          }
        >
          <Touchable
            accessibilityComponentType="button"
            accessibilityTraits={
              Array [
                "button",
              ]
            }
            delayPressIn={50}
            onPress={[Function]}
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderRadius": 3,
                "borderWidth": 0,
                "elevation": 3,
                "shadowColor": "rgba(0, 0, 0, 0.2)",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 3,
              }
            }
            testID="event-tile-3"
          >
            <EventTile
              date="2018-07-10T00:00"
              eventCategories={
                Array [
                  "Cabaret & Variety",
                  "Music",
                ]
              }
              image={
                Object {
                  "height": 1,
                  "uri": "http://example.com/image.png",
                  "width": 1,
                }
              }
              name="some other"
            />
          </Touchable>
        </Component>
        <Component
          key="4"
          style={
            Array [
              Object {
                "marginBottom": 12,
                "width": "50%",
              },
              false,
            ]
          }
        >
          <Touchable
            accessibilityComponentType="button"
            accessibilityTraits={
              Array [
                "button",
              ]
            }
            delayPressIn={50}
            onPress={[Function]}
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderRadius": 3,
                "borderWidth": 0,
                "elevation": 3,
                "shadowColor": "rgba(0, 0, 0, 0.2)",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 3,
              }
            }
            testID="event-tile-4"
          >
            <EventTile
              date="2018-07-10T00:00"
              eventCategories={
                Array [
                  "Cabaret & Variety",
                  "Music",
                ]
              }
              image={
                Object {
                  "height": 1,
                  "uri": "http://example.com/image.png",
                  "width": 1,
                }
              }
              name="some other"
            />
          </Touchable>
        </Component>
        <Component
          key="5"
          style={
            Array [
              Object {
                "marginBottom": 12,
                "width": "50%",
              },
              Object {
                "paddingRight": 8,
              },
            ]
          }
        >
          <Touchable
            accessibilityComponentType="button"
            accessibilityTraits={
              Array [
                "button",
              ]
            }
            delayPressIn={50}
            onPress={[Function]}
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderRadius": 3,
                "borderWidth": 0,
                "elevation": 3,
                "shadowColor": "rgba(0, 0, 0, 0.2)",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 3,
              }
            }
            testID="event-tile-5"
          >
            <EventTile
              date="2018-07-10T00:00"
              eventCategories={
                Array [
                  "Cabaret & Variety",
                  "Music",
                ]
              }
              image={
                Object {
                  "height": 1,
                  "uri": "http://example.com/image.png",
                  "width": 1,
                }
              }
              name="some other"
            />
          </Touchable>
        </Component>
        <Component
          key="6"
          style={
            Array [
              Object {
                "marginBottom": 12,
                "width": "50%",
              },
              false,
            ]
          }
        >
          <Touchable
            accessibilityComponentType="button"
            accessibilityTraits={
              Array [
                "button",
              ]
            }
            delayPressIn={50}
            onPress={[Function]}
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderRadius": 3,
                "borderWidth": 0,
                "elevation": 3,
                "shadowColor": "rgba(0, 0, 0, 0.2)",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 3,
              }
            }
            testID="event-tile-6"
          >
            <EventTile
              date="2018-07-10T00:00"
              eventCategories={
                Array [
                  "Cabaret & Variety",
                  "Music",
                ]
              }
              image={
                Object {
                  "height": 1,
                  "uri": "http://example.com/image.png",
                  "width": 1,
                }
              }
              name="some other"
            />
          </Touchable>
        </Component>
      </Component>
    </ContentPadding>
  </ScrollView>
</Component>
`;
